# Minesweeper-ros-system

./: .gitignore  Dockerfile  README.md  devcontainer-template.json  docker-compose.yml  exmaple-settings.json  requirements.txt  ros_launch.py  settings.json  setup.py
Minedetection/: Detect.py  Detect_Live.py  YOLO_ROS_Node.py  data.yaml
Minedetection/best/: data.pkl
config/: ekf_config.yaml
lib/: Aruco_Modular.py  BaslerCameraModule.py  __init__.py  log.py  mapping.py  ros.py  serial_driver.py  settings.py
lib/test/: cam.py  ip_cam.py  joystick_testing.py  mouse.py
ros_nodes/: joystickTesting.py  joystick_analog.py  serialTesting.py
ros_nodes/Mapping_node/: bootstrap.py  main.py
ros_nodes/basler_adapter_nod/: bootstrap.py  main.py
ros_nodes/camera_adapter_node/: bootstrap.py  main.py
ros_nodes/camera_processed_node/: bootstrap.py  main.py
ros_nodes/camera_reader_node/: CMakeLists.txt  README.md  bootstrap.py  build.sh  main.py  main.py.save  run_camera.sh  run_image.sh  run_video.sh
ros_nodes/camera_reader_node/include/: YOLO10.hpp  YOLO11.hpp  YOLO5.hpp  YOLO7.hpp  YOLO8.hpp
ros_nodes/camera_reader_node/include/tools/: BoundedThreadSafeQueue.hpp  Config.hpp  ScopedTimer.hpp
ros_nodes/camera_reader_node/models/: export_onnx.py
ros_nodes/camera_reader_node/src/: camera_inference.cpp  image_inference.cpp  mine_detection_node_mattmatt.cpp  video_inference.cpp
ros_nodes/camera_reader_node_2/: bootstrap.py  main.py
ros_nodes/hamza_camera_node/: bootstrap.py  main.py
ros_nodes/hamza_gui_node/: bootstrap.py  main.py
ros_nodes/joystick_node/: bootstrap.py  main.py
ros_nodes/joystick_node_test/: bootstrap.py  main.py
ros_nodes/keyboard_node/: bootstrap.py  main.py
ros_nodes/localisation_node/: bootstrap.py  main.py
ros_nodes/logging_node/: main.py
ros_nodes/mine_vision_node/: bootstrap.py  main.py
scripts/: raspi_ssh.py  ros_down.py  ros_master_shell.py  upload_cu_code.py  upload_raspi_code.py
serial_firmware/: platformio.ini
(+512 files in other folders)
